--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
     compileSdkVersion 26
@@ -7,8 +22,8 @@ android {
         applicationId "me.carc.carcintervaltimer"
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode="2"
-        versionName="0.0.2-beta"
+        versionCode="5"
+        versionName="0.0.5-beta"
         vectorDrawables.useSupportLibrary = true
         javaCompileOptions {
             annotationProcessorOptions {
@@ -67,19 +82,19 @@ dependencies {
     compile "com.jakewharton:butterknife:$BUTTERKNIFE_VERSION"
     annotationProcessor "com.jakewharton:butterknife-compiler:$BUTTERKNIFE_VERSION"
 
-/*
+
     compile "com.trello.rxlifecycle2:rxlifecycle:$RXLIFECYCLE"
     compile "com.trello.rxlifecycle2:rxlifecycle-android:$RXLIFECYCLE"
     compile "com.trello.rxlifecycle2:rxlifecycle-components:$RXLIFECYCLE"
     compile "com.tbruyelle.rxpermissions2:rxpermissions:$RXPERMISSIONS"
-*/
+
 
     compile "android.arch.persistence.room:runtime:$ROOMVERSION"
     annotationProcessor "android.arch.persistence.room:compiler:$ROOMVERSION"
 
     // DAGGER
     def daggerCompiler = "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
-    compile  "com.google.dagger:dagger:$DAGGER_VERSION"
+    compile "com.google.dagger:dagger:$DAGGER_VERSION"
     provided 'org.glassfish:javax.annotation:10.0-b28' //Required by Dagger2
     annotationProcessor daggerCompiler
     testAnnotationProcessor daggerCompiler
@@ -93,4 +108,9 @@ dependencies {
     compile 'com.mikepenz:fastadapter:2.6.3@aar'
 
     testCompile 'junit:junit:4.12'
+
+    compile 'com.github.lzyzsd:circleprogress:1.2.1'
+    compile('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
+        transitive = true;
+    }
 }
