--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="me.carc.intervaltimer">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name="me.carc.intervaltimer.App"
@@ -11,9 +13,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme.NoActionBar" >
         <activity
-            android:name="me.carc.intervaltimer.ui.MainActivity"
+            android:name="me.carc.intervaltimer.ui.ServicedActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -28,6 +30,31 @@
 
         <service android:name="me.carc.intervaltimer.services.VibrateService"/>
 
+
+        <!-- BroadcastReceiver that listens for incoming SMS messages -->
+        <receiver
+            android:name=".alarm.AlarmReceiver"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="me.carc.intervaltimer.alarm.ALARM_RECIEVED">
+            <intent-filter>
+                <action android:name="me.carc.intervaltimer.alarm.ALARM_RECIEVED"/>
+            </intent-filter>
+        </receiver>
+
+
+        <service
+            android:name=".services.ProgramRunService"
+            android:exported="false"/>
+
+        <service
+            android:enabled="true"
+            android:name="me.carc.intervaltimer.alarm.AlarmIntentService"/>
+
+
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="fbef5068aff924f588f1045c445fae0a1e2eaa4a" />
     </application>
 
 </manifest>
